[tool.poetry]
name = "quantum-compiler-explorer"
version = "0.1.0"
description = ""
authors = ["Jamie Friel <jamiefriel@googlemail.com>"]
readme = "README.md"
packages = [{include = "quantum_compiler_explorer"}]

[tool.poetry.dependencies]
python = ">3.10,<3.13"
pytket = "^1.36.0"
bqskit = "^1.2.0"
qiskit-superstaq = "^0.5.32"
qiskit = "^1.3.0"
pennylane = "^0.39.0"
mitiq = "^0.41.0"
staq = "^0.1.20"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
